@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-15T01:50:12Z",
-  "count_outdated" : 1826,
-  "uniques_outdated" : 364,
+  "timestamp" : "2022-05-15T08:22:21Z",
+  "count_outdated" : 1827,
+  "uniques_outdated" : 365,
   "count" : 2110,
   "uniques" : 402,
   "clones" : [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-02T00:00:00Z",
       "count": 1,
