@@ -1,3 +1,10 @@
+2022-05-15T08:22:21Z:
+* notice: last 14d: all unq: 283 21
+* notice: prev accum: outdated-all outdated-unq / all unq: 1826 364 / 2110 402
+* notice: next accum: outdated-all outdated-unq / all unq: 1827 365 / 2110 402
+* notice: prev json diff / prev day diff: unq all: +0 +0 -0 -0 / +0 +1 -0 -0
+* notice: changed dates: []
+
 2022-05-15T01:50:12Z:
 * notice: last 14d: all unq: 284 21
 * notice: prev accum: outdated-all outdated-unq / all unq: 1826 364 / 2109 402
